Fixed game logic and querries

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
     "framer-motion": "^2.6.13",
     "react": "^16.13.1",
     "react-countup": "^4.3.3",
-    "react-csv-reader": "^3.1.1",
     "react-dom": "^16.13.1",
+    "react-papaparse": "^3.8.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
