--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "firebase": "^8.7.1",
     "framer-motion": "^2.6.13",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
